# Shitty-Text-Search

./: .gitignore  CMakeLists.txt  ContentLoader.cpp  ContentLoader.h  DocumentRanker.cpp  DocumentRanker.h  DocumentRepository.cpp  DocumentRepository.h  IndexedDocument.cpp  IndexedDocument.h  README.md  SnippetGenerator.cpp  SnippetGenerator.h  SnippitCreator.cpp  SnippitCreator.h  SparseVector.cpp  SparseVector.h  StopWordRemover.cpp  StopWordRemover.h  TextProcessor.cpp  TextProcessor.h  TokenCaseConverter.cpp  TokenCaseConverter.h  TokenModifier.cpp  TokenModifier.h  TokenVectorCreator.cpp  TokenVectorCreator.h  content_stream.cpp  content_stream.h  get_txt_files.py  main.cpp
refs/: stop_words.txt
